--- a/gen_label_df.ipynb
+++ b/gen_label_df.ipynb
@@ -8,8 +8,8 @@
     "\n",
     " * The goal for this notebook is to put JSON label files into dataframes.\n",
     " * There are three camera viewing angles so there will be three dataframes generated.\n",
-    " * The three dataframes will be merge \n",
-    " * Dataframe specification:\n",
+    " * Three dataframes will be merged. \n",
+    " * The merged dataframe specification:\n",
     "   * Index column: epoch timestamp (second resolution)\n",
     "   * Data colomns: left, right, op"
    ]
