--- a/gen_label_df.ipynb
+++ b/gen_label_df.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,9 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3606 3606\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(ts), len(labels))"
    ]
@@ -139,9 +147,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ts</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:00</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:01</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:02</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:03</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:04</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:05</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:06</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:07</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:08</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:09</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         label\n",
+       "ts                            \n",
+       "2019-07-15 19:15:00  header up\n",
+       "2019-07-15 19:15:01  header up\n",
+       "2019-07-15 19:15:02  header up\n",
+       "2019-07-15 19:15:03  header up\n",
+       "2019-07-15 19:15:04  header up\n",
+       "2019-07-15 19:15:05  header up\n",
+       "2019-07-15 19:15:06  header up\n",
+       "2019-07-15 19:15:07  header up\n",
+       "2019-07-15 19:15:08  header up\n",
+       "2019-07-15 19:15:09  header up"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "left_df = pd.DataFrame({'ts': ts, 'label': labels})\n",
     "\n",
@@ -160,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,9 +270,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ts</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:05</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:06</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:07</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:08</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:09</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:10</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:11</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:12</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:13</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:14</th>\n",
+       "      <td>header up</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         label\n",
+       "ts                            \n",
+       "2019-07-15 19:15:05  header up\n",
+       "2019-07-15 19:15:06  header up\n",
+       "2019-07-15 19:15:07  header up\n",
+       "2019-07-15 19:15:08  header up\n",
+       "2019-07-15 19:15:09  header up\n",
+       "2019-07-15 19:15:10  header up\n",
+       "2019-07-15 19:15:11  header up\n",
+       "2019-07-15 19:15:12  header up\n",
+       "2019-07-15 19:15:13  header up\n",
+       "2019-07-15 19:15:14  header up"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fol = [x[0] for x in os.walk(os.path.join(base_dir, cam_angle))]\n",
     "del fol[0]\n",
@@ -198,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,9 +401,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ts</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:10</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:11</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:12</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:13</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:14</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:15</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:16</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:17</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:18</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:16:19</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    label\n",
+       "ts                       \n",
+       "2019-07-15 19:16:10  none\n",
+       "2019-07-15 19:16:11  none\n",
+       "2019-07-15 19:16:12  none\n",
+       "2019-07-15 19:16:13  none\n",
+       "2019-07-15 19:16:14  none\n",
+       "2019-07-15 19:16:15  none\n",
+       "2019-07-15 19:16:16  none\n",
+       "2019-07-15 19:16:17  none\n",
+       "2019-07-15 19:16:18  none\n",
+       "2019-07-15 19:16:19  none"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fol = [x[0] for x in os.walk(os.path.join(base_dir, cam_angle))]\n",
     "del fol[0]\n",
@@ -243,9 +530,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>left</th>\n",
+       "      <th>right</th>\n",
+       "      <th>op</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ts</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:00</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:01</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:02</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:03</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:04</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:05</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:06</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:07</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:08</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15 19:15:09</th>\n",
+       "      <td>header up</td>\n",
+       "      <td>header up</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          left      right   op\n",
+       "ts                                            \n",
+       "2019-07-15 19:15:00  header up        NaN  NaN\n",
+       "2019-07-15 19:15:01  header up        NaN  NaN\n",
+       "2019-07-15 19:15:02  header up        NaN  NaN\n",
+       "2019-07-15 19:15:03  header up        NaN  NaN\n",
+       "2019-07-15 19:15:04  header up        NaN  NaN\n",
+       "2019-07-15 19:15:05  header up  header up  NaN\n",
+       "2019-07-15 19:15:06  header up  header up  NaN\n",
+       "2019-07-15 19:15:07  header up  header up  NaN\n",
+       "2019-07-15 19:15:08  header up  header up  NaN\n",
+       "2019-07-15 19:15:09  header up  header up  NaN"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m = pd.merge(left_df, right_df, how='outer', left_index=True, right_index=True, suffixes=('_left', '_right'))\n",
     "labels_df = pd.merge(m, op_df, how='outer', left_index=True, right_index=True)\n",
@@ -262,11 +666,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_df.to_pickle('./labels.pkl')"
+    "labels_df = labels_df.fillna('not available')\n",
+    "labels_df.to_hdf('./labels.h5', key='labels')"
    ]
   }
  ],
