Add: some markdowns

--- a/fit_data_to_label.ipynb
+++ b/fit_data_to_label.ipynb
@@ -138,6 +138,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we want to try another: an unknown PGN."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
